[package]
name = "ble-prodder"
version = "0.1.0"
edition = "2024"

[dependencies]
binrw = "0.15.0"
bitfield-struct = "0.12.1"
bluest = "0.6.9"
btleplug = "0.11.8"
eyre = "0.6.12"
futures = "0.3.31"
num-traits = { version = "0.2.19", default-features = false }
rand = "0.9.2"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
uuid = "1.19.0"
